@@ -177,22 +177,21 @@ if ( (is_ie && !is_ie4up) || (is_opera && !is_opera5up) || (is_nav && !is_nav6up
 	slideshow_body();
 
 $imageDir = $gallery->app->photoAlbumURL."/images";
-$upArrowURL = '<img src="' . getImagePath('nav_home.gif') . '" width="13" height="11" '.
-		'alt="' . _("navigate UP") .'" title="' . _("navigate UP") .'" border="0">';
 
 #-- breadcrumb text ---
 $upArrowURL = '<img src="' . getImagePath('nav_home.gif') . '" width="13" height="11" '.
-                'alt="' . _("navigate UP") .'" title="' . _("navigate UP") .'" border="0">';
+  'alt="' . _("navigate UP") .'" title="' . _("navigate UP") .'" border="0">';
 
 if (isset($gallery->album) && $gallery->album->fields['returnto'] != 'no') {
-    foreach ($gallery->album->getParentAlbums(true) as $navAlbum) {
-        $breadcrumb["text"][] = $navAlbum['prefixText'] .': <a class="bread" href="'. $navAlbum['url'] . '">'.
-          $navAlbum['title'] . "&nbsp;" . $upArrowURL . "</a>";
+    foreach ($gallery->album->getParentAlbums() as $navAlbum) {
+	$breadcrumb["text"][] = $navAlbum['prefixText'] .': <a class="bread" href="'. $navAlbum['url'] . '">'.
+	  $navAlbum['title'] . "&nbsp;" . $upArrowURL . "</a>";
     }
-} else {
-        /* We're on mainpage */
-        $breadcrumb["text"][]= _("Gallery") .": <a class=\"bread\" href=\"" . makeGalleryUrl("albums.php") . "\">" .
-          $gallery->app->galleryTitle . "&nbsp;" . $upArrowURL . "</a>";
+}
+elseif (!isset($gallery->album)) {
+    /* We're on mainpage */
+    $breadcrumb["text"][]= _("Gallery") .": <a class=\"bread\" href=\"" . makeGalleryUrl("albums.php") . "\">" .
+      $gallery->app->galleryTitle . "&nbsp;" . $upArrowURL . "</a>";
 }
 
 $breadcrumb["bordercolor"] = $borderColor;
