@@ -1,3 +1,8 @@
+2005-08-03 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b7
+
+	* Fix: A link to mainpage was shown in slideshow breadcrumb,
+	       regardless wether return to was off.
+
 2005-07-30 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b6
 
 	* Change: Mailing
